--- a/homework.html
+++ b/homework.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="stylesheet" href="./stail.css">
+  <link rel="stylesheet" href="./style2.css">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,11 @@
   <title>Document</title>
 </head>
 <body>
+ <div>
   <i class="fas fa-ghost" ></i>
+  <i class="fas fa-ghost" ></i> 
+ 
+ </div>
   
 <script src="https://kit.fontawesome.com/5386c999fc.js" crossorigin="anonymous"></script>
 </body>
