--- a/homework.html
+++ b/homework.html
@@ -11,7 +11,7 @@
  <div>
   <i class="fas fa-ghost" ></i>
   <i class="fas fa-ghost" ></i> 
- 
+  <i class="fas fa-ghost" ></i> 
  </div>
   
 <script src="https://kit.fontawesome.com/5386c999fc.js" crossorigin="anonymous"></script>
