--- a/homework.html
+++ b/homework.html
@@ -8,11 +8,16 @@
   <title>Document</title>
 </head>
 <body>
- <div>
-  <i class="fas fa-ghost" ></i>
-  <i class="fas fa-ghost" ></i> 
-  <i class="fas fa-ghost" ></i> 
- </div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
+  <div><i class="fas fa-bomb"></i></div>
   
 <script src="https://kit.fontawesome.com/5386c999fc.js" crossorigin="anonymous"></script>
 </body>
